2023-07-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* cidtype0.c, pdffont.c:
	Replace multibyte characters <’> U+2019 by ASCII characters.

2023-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {vf,tfm}.c:
	Fallback multibyte characters in virtual fonts to
	OFM fonts for (u)pTeX.
	https://github.com/texjporg/tex-jp-build/issues/99
	* configure.ac: version 20230429.
	* dvipdfmx-upjf.test, Makefile_upjf, tests/upjf-r00.{ofm,opl},
	tests/upjv-r00.{ofm,opl}, tests/upjf1-r.{tfm,pl},
	tests/upjf1_{full,omit}.{vf,zvp0}, Makefile.am:
	Add new tests for fallback virtual font to OFM.

	The rule for virtual fonts (VF) fallback is extended:
	If a VF has no entry of a codepoint and the first
	MAPFONT designates an OFM for (u)pTeX, then we designate the
	glyph (usually with a fullwidth metric) of the same codepoint
	with the same metrics of the codepoint in the OFM.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-09  Karl Berry  <karl@freefriends.org>

	* xbb.c (show_version),
	* configure.ac,
	* dvipdfmx.c (show_version): copyright 2023.

2022-07-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {dvipdfmx,spc_pdfm}.c, dpxconf.{c,h}, man/dvipdfmx.1:
	Add a new option --pdfm-str-utf8 to make pdfmark and/or bookmark
	by upLaTeX + hyperref/pdfcomment package + dvipdfmx without CMap.
	* dvipdfmx-upjf.test, tests/Makefile_upjf, tests/upjf.dvi:
	Add tests for the option --pdfm-str-utf8.
	https://github.com/texjporg/tex-jp-build/issues/143
	* configure.ac: version 20220710.

2022-06-15  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* cidtype2.c, tt_cmap.c: Support some TrueType fonts in macOS
	which use 0-4 cmap.

2022-06-13  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* pdfximage.c: Fix a bug due to an uninitialized variable
	pointed out in
	https://tug.org/pipermail/dvipdfmx/2022-June/000340.html.
	(Windows only)

2022-04-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {dvi,dvipdfmx,tfm}.c, dvi.h:
	Warn if interpreting OFM FONTDIR as pTeX vertical writing
	with option -v.
