@@ -1,3 +1,10 @@
+2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dpxfile.c: Avoid compiler warning on MinGW.
+	* xdvipdfm-{ann,bad,bb,bkm,psz,ptx,res,rev,ttc}.test,
+	xdvipdfmx.test, dvipdfmx-upjf.test:
+	Make easier to test on Windows.
+
 2023-07-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* cidtype0.c, pdffont.c:
